<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Hops Guide</string>
    <string name="welcome">Hops Guide</string>
    <string name="action_settings">Settings</string>
    <string name="browseButtonLabel">Browse</string>
    <string name="information">i</string>
    <string name="browseButtonDescription">Button for browsing</string>
    <string name="listButtonDescription">Button for viewing own lists</string>
    <string name="title_activity_search_screen">SearchActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_search">Search</string>
    <string name="searchBoxDescription">Search box</string>
    <string name="searchInputButtonDescription">Search for hops results using given input text</string>
    <string name="serchInputButtonLabel">Advanced Search</string>
    <string name="resultTextArea">Area for text results from searches</string>
    <string name="informationButtonDescription">Button for information access</string>
    <string name="defaultResultText">Please enter name of desired hops</string>
    <string name="informationContent">Copyright © gruppe 1 INFO331</string>
    <string name="title_activity_information">InformationActivity</string>
    <string name="listButtonLabel">My lists</string>
    <string name="title_activity_list">My Lists</string>
    <string name="listNames">List names</string>
    <string name="selectList">Select list to add hops</string>
    <string name="cancelButtonLabel">Cancel</string>
    <string name="addListButtonLabel">Add</string>
    <string name="addToListText">Create new list</string>
    <string name="title_activity_list_view">ListViewActivity</string>
    <string name="listContentActivity"></string>
    <string name="title_activity_advanced_search">Advanced search</string>
    <string name="countryLabel">Country:</string>
    <string name="countrySpinnerLabel">countrySpinner</string>
    <string name="title_activity_hops_desc">HopDescActivity</string>
    <string name="title_activity_desc">Description</string>

</resources>